# py_xulang

./: README.md  pyproject.toml
document/: guide.md  preprocessor.md  std.md
sample_code/: Hello.xu  MacroPrime.xu  Prime.xu  PrimeTable.xu  PrimeTable2.xu  Sum.xu
xulang/: BraceSequence.py  FileRunner.py  MatchBraceSequence.py  RuleSet.py  Sequence.py  SimpleTerm.py  ValueTerm.py  VarSet.py  __main__.py
xulang/include/Std/: Array.xu  Map.xu  Math.xu  Num.xu  Reduce.xu  Select.xu  Sort.xu
