[project]
name = "xulang"
version = "0.2.0"
description = "Xulang: a minimalist programming language with no rules to memorize. Dedicated to my dear little mouse."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pip_pkg_info"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
